# cse144-collegeassist

./: .gitignore  README.md
JupyterNotebook/: .env.temp  RAGdb.ipynb  pyproject.toml  ragas.ipynb  requirements.txt
backend/: .env.temp  .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py
backend/src/File/: FileManager.py
backend/src/Logging/: Logging.py
backend/src/Web/: DataScraper.py  GoogleCloudStorage.py  ImageConverter.py  SSLAdapter.py  WebCrawler.py
doc/: OnNautilus.md
notebook/: DataVisualization.ipynb  pyproject.toml  rag.ipynb  requirements.txt
rag/: rag.ipynb
vector_test/: .gitignore  README.md  embed_test.ipynb  query_test.ipynb  requirements.txt  vector_test.py
